# fides

./: .dockerignore  .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  PRD.html  README.md  config.example.toml  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml
bruno/: README.md  bruno.json
bruno/Admin/: Healthz.bru
bruno/Admin/Campaigns/: Create.bru  Delete.bru  Get.bru  List.bru  Update.bru
bruno/Admin/Customers/: Create.bru  Delete.bru  Get.bru  List.bru  Segments.bru  Update.bru
bruno/Admin/Earning Rules/: Create.bru  Delete.bru  Get.bru  List.bru  Update.bru
bruno/Admin/Rewards/: Create.bru  Delete.bru  Get.bru  List.bru  Update.bru
bruno/Admin/Segments/: Add Member.bru  Create Dynamic.bru  Create.bru  Delete.bru  Get.bru  List Members.bru  List.bru  Remove Member.bru  Update.bru
bruno/Admin/Tenants/: Create.bru  Delete.bru  Get.bru  List.bru  Update.bru
bruno/Admin/Tiers/: Create.bru  Delete.bru  Get.bru  List.bru  Update.bru
bruno/Admin/Webhook Subscriptions/: Create.bru  Delete.bru  Get.bru  List.bru  Update.bru
bruno/Runtime/: Anonymize Customer.bru  Create Lock.bru  Fulfill Lock.bru  Get Balance.bru  Healthz.bru  Post Event.bru  Post Transaction.bru  Redeem Reward.bru  Release Lock.bru  Use Voucher.bru  Whoami.bru  folder.bru
bruno/environments/: Local.bru
crates/api/: Cargo.toml
crates/api/src/: http_error.rs  main.rs  routes.rs  tenant_mw.rs
crates/core/: Cargo.toml
crates/core/src/: fefo.rs  lib.rs  rules.rs  webhook.rs
crates/db/: Cargo.toml
crates/db/src/: admin.rs  audit.rs  events.rs  ledger.rs  lib.rs  locks.rs  rewards.rs  segments.rs  webhooks.rs
crates/db/tests/: audit.rs  events.rs  ledger.rs  locks.rs  perf.rs  rewards.rs  tenancy.rs  webhooks.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  error.rs  lib.rs  telemetry.rs  tenant.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
docker/: Dockerfile
loadtest/: README.md  read_latency.js  write_throughput.js
migrations/: 0001_init.sql  0002_ledger.sql  0003_events.sql  0004_locks.sql  0005_rewards.sql  0006_webhooks_audit.sql  0007_admin_soft_delete.sql  0008_segments.sql  0009_segment_rules.sql
