[package]
name = "fides-api"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
fides-shared.workspace = true
fides-core.workspace = true
fides-db.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
anyhow.workspace = true
