[package]
name = "fides-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
# PURE domain crate — NO sqlx, NO tokio, NO axum. I/O-free so ledger logic is unit-testable.
fides-shared.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
