[package]
name = "fides-db"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
fides-shared.workspace = true
fides-core.workspace = true
sqlx.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
