[package]
name = "fides-shared"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
figment.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
